--- a/action.yaml
+++ b/action.yaml
@@ -21,6 +21,10 @@ inputs:
       `env=staging;version=1` becomes `--ext-str env=staging --ext-str version=1`. 
       Use either of comma, space or semicolon as argument separator.
     required: false
+  GCP_KEY:
+    description: |
+      Service account key for pulling the image from GCR
+    required: true
 runs:
   using: 'docker'
   image: 'docker://eu.gcr.io/gener8/go-k8s-deployer:latest'
